<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Main2Activity"
    android:layout_centerHorizontal="true"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:text="@string/créer_compte"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#00A695"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="40dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-184dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="181dp"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_marginTop="-50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-131dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="181dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="-300dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="243dp"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="-350dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:hint="@string/mot_de_passe"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_marginBottom="-225dp"
        android:background="@drawable/rounded_button"
        android:text="@string/créer"
        android:textColor="#00A695"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>