<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#00A695"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/e_mail"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:layout_above="@+id/editText4"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-240dp"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button4"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_above="@+id/editText4"
        android:layout_marginBottom="-400dp"
        android:background="@drawable/rounded_button"
        android:text="@string/connecter"
        android:textColor="#00A695"
        android:textSize="23sp"
        android:textStyle="bold" />
</RelativeLayout>