<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#80DDFF"
    tools:context=".Main4Activity">

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:iconifiedByDefault="false"
        android:queryHint="Recherche" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_above="@+id/searchview"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-316dp"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/lab1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="163dp"
        android:layout_height="99dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logos"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#FFFFFF"
        android:text="@string/hopital_ibn_eljazar_kairouan"
        android:layout_marginLeft="150dp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button5"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-387dp"
        android:background="@drawable/rounded_button"
        android:text="@string/nouveau_patient"
        android:textColor="#00A695"
        android:textSize="22sp"
        android:textStyle="bold" />



</RelativeLayout>