<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80DDFF"
    android:orientation="horizontal"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="274dp"
        android:layout_gravity="top"

        app:srcCompat="@drawable/health"
        android:contentDescription="@string/todo3" />

    <Button
        android:id="@+id/button"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/se_connecter"
        android:textColor="#00A695"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button2"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="-145dp"
        android:background="@drawable/rounded_button"
        android:text="@string/créer"
        android:textColor="#00A695"
        android:textSize="25sp"
        android:textStyle="bold" />



</RelativeLayout>